# workflow-engine

./: .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt
examples/: addition.json  addition.py  append.json  append.py  error.json  error.py  linear.py
src/workflow_engine/: __init__.py  types.py  workflow.py
src/workflow_engine/contexts/: __init__.py  in_memory.py  local.py  supabase.py
src/workflow_engine/core/: __init__.py  context.py  data.py  edge.py  error.py  execution.py  file.py  node.py  schema.py  value.py  workflow.py
src/workflow_engine/core/values/: __init__.py  data.py  mapping.py  primitives.py  schema.py  value.py
src/workflow_engine/execution/: __init__.py  topological.py
src/workflow_engine/files/: __init__.py  json.py  pdf.py  text.py
src/workflow_engine/functions/: builtins.py
src/workflow_engine/nodes/: __init__.py  arithmetic.py  conditional.py  constant.py  data.py  error.py  iteration.py  json.py  text.py
src/workflow_engine/resolvers/: __init__.py  in_memory.py  supabase.py
src/workflow_engine/utils/: assign.py  env.py  generic.py  immutable.py  iter.py  semver.py  uuid.py
src/workflow_engine_atecsa/: __init__.py
src/workflow_engine_atecsa/functions/: __init__.py  builtins.py
tests/: test_addition.py  test_append.py  test_conditional.py  test_data.py  test_error.py  test_file.py  test_metadata.py  test_schema.py  test_type_checking.py  test_value.py  test_workflow_integration.py  test_workflow_mock.py  test_workflow_supabase_integration.py  test_workflow_validation.py
workflow_engine/: __init__.py  functionRegistry.py  registry.py  resolvers.py  types.py  workflow.py
workflow_engine/functions/: __init__.py  builtins.py
workflow_engine/resolvers/: base.py  in_memory.py  supabase.py
