[project]
name = "workflow-engine"
version = "0.1.0"
description = "A workflow graph execution package"
authors = [
    {name = "Anthony Tecsa",email = "anthonytecsa@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "networkx (>=3.4.2,<4.0.0)",
    "pydantic (>=2.11.1,<3.0.0)",
    "supabase (>=2.15.0,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-mock = "^3.14.0"
python-dotenv = "^1.1.0"
pytest-asyncio = "^0.26.0"


