[tool.poetry]
name = "workflow-engine"
version = "0.1.0"
description = "A simple engine to execute workflows defined as JSON graphs"
readme = "README.md"
authors = ["Anthony Tecsa <anthonytecsa@gmail.com>"]
license = "MIT"
packages = [
    { include = "workflow_engine", from = "src" }
]
include = ["py.typed"]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
networkx = ">=3.4.2,<4.0.0"
overrides = "^7.7.0"
psycopg = "^3.2.6"
pydantic = ">=2.11.1,<3.0.0"
supabase = ">=2.15.0,<3.0.0"
dotenv = "^0.9.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-mock = "^3.14.0"
python-dotenv = "^1.1.0"
pytest-asyncio = "^0.26.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
