[tool.poetry]
name = "workflow-engine"
version = "0.3.1"
description = "A simple engine to execute workflows defined as JSON graphs"
readme = "README.md"
authors = [
    "Anthony Tecsa <anthonytecsa@gmail.com>",
    "Jason Sun <jason@adanomad.com>",
    "Justin Xu <xu.justin.j@gmail.com>",
]
license = "MIT"
packages = [
    { include = "workflow_engine", from = "src" }
]
include = ["py.typed"]

[tool.poetry.dependencies]
dotenv = "^0.9.9"
networkx = ">=3.4.2,<4.0.0"
overrides = "^7.7.0"
pydantic = ">=2.11.1,<3.0.0"
python = ">=3.10,<4.0"

[tool.poetry.group.dev.dependencies]
pyright = "^1.1.403"
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"
pytest-mock = "^3.14.0"
python-dotenv = "^1.1.0"
ruff = "^0.11.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
